# cron-mon

./: .adr-dir  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yml
.devcontainer/: Dockerfile  (+2 more)
api/: Cargo.toml  Dockerfile  Makefile  Rocket.toml  build.rs  coverage.sh  diesel.toml
api/docs/: openapi.yaml
api/docs/adr/: 0001-record-architecture-decisions.md  0002-database-managed-by-user.md  0003-api-will-be-authenticated.md  0004-keycloak-managed-by-user.md  0005-api-key-usage-recorded.md  0006-alert-configurations-will-use-cti.md
api/src/: application.rs  domain.rs  errors.rs  infrastructure.rs  lib.rs  main.rs
api/src/application/: fairings.rs  mod.rs  response.rs  routes.rs  services.rs
api/src/application/fairings/: cors.rs  default_json.rs
api/src/application/routes/: alert_config.rs  alert_configs.rs  api_keys.rs  get_monitor.rs  health.rs  jobs.rs  list_monitors.rs  mod.rs  monitors.rs
api/src/application/services/: create_monitor.rs  delete_monitor.rs  fetch_alert_configs.rs  fetch_job.rs  fetch_monitors.rs  finish_job.rs  generate_key.rs  mod.rs  process_late_jobs.rs  revoke_key.rs  start_job.rs  update_monitor.rs
api/src/application/services/alert_configs/: create_alert_config.rs  delete_alert_config.rs  fetch_alert_configs.rs  mod.rs  monitor_association.rs  test_alert_config.rs  update_alert_config.rs
api/src/application/services/api_keys/: generate_key.rs  mod.rs
api/src/application/services/monitors/: alert_erroneous_jobs.rs  delete_monitor.rs  finish_job.rs  mod.rs  process_late_jobs.rs  start_job.rs  update_monitor.rs
api/src/domain/: errors.rs  models.rs
api/src/domain/models/: alert_config.rs  api_key.rs  job.rs  mod.rs  monitor.rs
api/src/domain/services/: get_notifier.rs  mod.rs  monitors.rs
api/src/infrastructure/: cors.rs  database.rs  db_schema.rs  logging.rs  mod.rs  notify.rs  paging.rs  repositories.rs  threading.rs
api/src/infrastructure/auth/: jwt.rs  mod.rs
api/src/infrastructure/logging/: mod.rs  test_logger.rs  tracing_logger.rs
api/src/infrastructure/middleware/: mod.rs  response.rs
api/src/infrastructure/middleware/fairings/: cors.rs  default_json.rs
api/src/infrastructure/middleware/guards/: api_key.rs  jwt.rs  mod.rs
api/src/infrastructure/migrations/2024-04-02-193314_create_monitor/: down.sql  up.sql
api/src/infrastructure/migrations/2024-04-03-210551_create_job/: down.sql  up.sql
api/src/infrastructure/migrations/2024-04-17-095037_change_status_to_succeeded/: down.sql  up.sql
api/src/infrastructure/migrations/2024-04-19-202248_add_max_end_time_to_job/: down.sql  up.sql
api/src/infrastructure/migrations/2024-10-04-192304_add_tenant_to_monitor/: down.sql  up.sql
api/src/infrastructure/migrations/2024-10-06-200728_add_api_key_table/: up.sql
api/src/infrastructure/migrations/2024-10-25-215139_add_name_and_sha256_to_api_key/: down.sql  up.sql
api/src/infrastructure/migrations/2024-11-30-211926_add_alert_flags_to_job/: down.sql  up.sql
api/src/infrastructure/migrations/2024-12-02-203820_add-alert-config-tables/: down.sql  up.sql
api/src/infrastructure/migrations/2024-12-02-214417_webhook-alert-config/: down.sql  up.sql
api/src/infrastructure/migrations/2024-12-13-222551_add-name-to-monitor-alert-config/: down.sql  up.sql
api/src/infrastructure/models/: alert_config.rs  api_key.rs  job.rs  monitor.rs
api/src/infrastructure/notify/: late_job_logger.rs  mod.rs  slack.rs
api/src/infrastructure/notify/slack/: integration.rs  messages.rs  mod.rs
api/src/infrastructure/repositories/: alert_config_repo.rs  alert_configs.rs  api_key_repo.rs  api_keys.rs  mock_api_key_repo.rs  mod.rs  monitor.rs  monitor_repo.rs  test_repo.rs
api/src/infrastructure/repositories/alert_config/: alert_config_repo.rs  mod.rs
api/src/infrastructure/seeding/: Dockerfile  seeds.sql
api/test_utils/: Cargo.toml
api/test_utils/src/: lib.rs  logging.rs
api/tests/: add_monitor_test.rs  alert_config_association_routes_test.rs  alert_config_repo_test.rs  alert_config_routes_test.rs  api_key_auth_routes_test.rs  api_key_repo_test.rs  api_key_routes_test.rs  create_connection_pool_test.rs  create_db_connection_pool_test.rs  delete_monitor_test.rs  establish_connection_test.rs  get_monitor_test.rs  health_route_test.rs  integration_test.rs  jobs_routes_test.rs  jwt_auth_routes_test.rs  list_monitors_test.rs  modify_monitor_test.rs  monitor_and_alert_test.rs  monitor_repo_test.rs  monitor_routes_test.rs  openapi_spec_test.rs
api/tests/common/: auth.rs  infra.rs  mod.rs  postgres.rs  seeds.rs
(+35 files in other folders)
