[package]
name = "cron-mon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.5.21", features = ["derive"] }
diesel = { version = "2.1.6", features = ["chrono", "uuid", "postgres"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
jsonwebtoken = "9.3.0"
moka = { version = "0.12.8", features = ["sync"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
signal-hook = "0.3.17"
tokio = { version = "1.40.0", features = ["test-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
rstest = "0.22.0"
pretty_assertions = "1.4.1"
test-utils = { path = "test_utils" }
tracing-test = "0.2.5"
wiremock = "0.6.2"
mockall = "0.13.0"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "cron-mon"
path = "src/bin/cron_mon.rs"
